[package]
name = "purgs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aott = { git = "https://github.com/Implodent/AOTT.git", version = "0.3.0" }
derive_more = "0.99.17"
itertools = "0.11.0"
logos = "0.13.0"
regex = "1.9.6"
thiserror = "1.0.49"
